--- a/assimp_qt_viewer/CMakeLists.txt
+++ b/assimp_qt_viewer/CMakeLists.txt
@@ -4,6 +4,9 @@ project(assimp_qt_viewer)
 # Qt5 requires cmake 3.1 or newer
 cmake_minimum_required(VERSION 3.1)
 
+# Assimp
+FIND_PACKAGE(assimp CONFIG REQUIRED)
+
 FIND_PACKAGE(OpenGL QUIET)
 
 # Qt5 version
@@ -34,6 +37,7 @@ IF(VIEWER_BUILD)
 		${CMAKE_CURRENT_BINARY_DIR}
 		${CMAKE_SOURCE_DIR}
 		${OPENGL_INCLUDE_DIR}
+		${STB_INCLUDE_DIR}
 	)
 
 	LINK_DIRECTORIES(${Assimp_BINARY_DIR})
@@ -55,7 +59,7 @@ IF(VIEWER_BUILD)
 	qt5_wrap_cpp(MOCrcs mainwindow.hpp glview.hpp)
 
 	add_executable(${PROJECT_NAME} ${assimp_qt_viewer_SRCS} ${UISrcs} ${MOCrcs})
-	target_link_libraries(${PROJECT_NAME} Qt5::Gui Qt5::Widgets Qt5::OpenGL ${OPENGL_LIBRARIES} assimp)
+	target_link_libraries(${PROJECT_NAME} Qt5::Gui Qt5::Widgets Qt5::OpenGL ${OPENGL_LIBRARIES} assimp::assimp)
 
 	IF(WIN32) # Check if we are on Windows
 		IF(MSVC) # Check if we are using the Visual Studio compiler
